Work on #11. Fixes overlapping divs on iPhone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,8 +11,10 @@ md-select {
   font-weight:bold;
 }
 
-.padded-content {
-  padding: 10px;
+@media (min-width: 600px) {
+	.padded-content {
+	  padding: 10px;
+	}
 }
 
 md-card > img.logo, md-card > :not(md-card-content) img.logo {
